[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Screens/Result.gd" type="Script" id=1]
[ext_resource path="res://Fonts/test_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Popup.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Roboto_Small.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/Roboto_VerySmall.tres" type="DynamicFont" id=5]

[node name="Result" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_bottom = 10.0
script = ExtResource( 1 )

[node name="Rematch" type="Button" parent="."]
margin_left = 594.302
margin_top = 840.0
margin_right = 954.302
margin_bottom = 950.0
custom_fonts/font = ExtResource( 2 )
text = "Rematch"

[node name="Quit" type="Button" parent="."]
margin_left = 1000.0
margin_top = 850.0
margin_right = 1360.0
margin_bottom = 940.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="Popup" type="Popup" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -408.0
margin_top = -231.0
margin_right = 408.0
margin_bottom = 231.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.33276
margin_right = -2.33276
custom_constants/separation = 27

[node name="Label" type="Label" parent="Popup/Panel/VBoxContainer"]
margin_left = 232.0
margin_top = 150.0
margin_right = 584.0
margin_bottom = 198.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 4 )
text = "Waiting for other player..."

[node name="Cancel" type="Button" parent="Popup/Panel/VBoxContainer"]
margin_left = 370.0
margin_top = 376.0
margin_right = 445.0
margin_bottom = 415.0
size_flags_horizontal = 6
size_flags_vertical = 0
custom_fonts/font = ExtResource( 5 )
text = "Cancel"

[node name="Filler" type="Control" parent="Popup/Panel/VBoxContainer"]
margin_top = 442.0
margin_right = 816.0
margin_bottom = 462.0
rect_min_size = Vector2( 0, 20 )
[connection signal="pressed" from="Rematch" to="." method="_on_Rematch_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Popup/Panel/VBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
